hopefully this works

--- a/04intro-css/04intro-css/index.html
+++ b/04intro-css/04intro-css/index.html
@@ -18,10 +18,20 @@
         <ul>
             <li class="active"><a href="index.html">Home Page</a></li>
             <li><a href="origin.html">Company Origin</a></li>
+            <li><a href="imageGallery.html">Image Gallery</a></li>
         </ul>
     </nav>
 
+<!--start of main-->
+    
     <main>
+        <section class="home-page">
+        <figure class="wrapped">
+            <img src="images/pexels-sebastian-ervi-1763075.jpg" alt="Home Page Image" loading="lazy" width="40%" height="auto">
+            <figcaption>Local Band Show</figcaption>
+        </figure>
+        <!-- Add other content for the home page here -->
+    </section>
         <h1 id="about">About Us</h1>
         <p>This is the ultimate guide to concerts. Welcome to Bands In Town! We're your go-to destination for discovering live music events. Our platform makes it simple to explore upcoming concerts and stay informed about the latest shows in your area. Whether you're into rock, pop, hip-hop, or any other genre, Bands In Town has you covered. Join us and never miss a beat! </p>
         
