--- a/05images/05images/index.html
+++ b/05images/05images/index.html
@@ -22,11 +22,13 @@
         </ul>
     </nav>
 
+<!--start of main-->
+    
     <main>
         <section class="home-page">
-        <figure class="home-image">
+        <figure class="wrapped">
             <img src="images/pexels-sebastian-ervi-1763075.jpg" alt="Home Page Image" loading="lazy" width="40%" height="auto">
-
+            <figcaption>Local Band Show</figcaption>
         </figure>
         <!-- Add other content for the home page here -->
     </section>
